Changes for parser implementation